--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header__container">
         <nav class="navigation">
           <a href="./index.html" class="logo link">
@@ -59,7 +59,7 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <main>
       <section class="portfolio section">
         <div class="container">
@@ -283,7 +283,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer__container">
         <div class="contact__footer">
           <a href="./index.html" class="link"
@@ -366,6 +366,6 @@
           </button>
         </form>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
