--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="container header__container">
         <nav class="navigation">
           <a href="./index.html" class="logo link">
@@ -56,8 +56,66 @@
             >
           </li>
         </ul>
+        <button type="button" class="menu__open">
+          <svg class="menu__open-icon" width="40" height="40">
+            <use href="./images/icons.svg#icon-menu"></use>
+          </svg>
+        </button>
       </div>
-    </header> -->
+      <div class="mob-menu">
+        <button type="button" class="menu-close">
+          <svg class="menu-close-icon" width="19" height="19">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <div class="mob-container">
+          <ul class="mob__nav list">
+            <li class="mob__nav-item">
+              <a href="./index.html" class="mob__nav-link link current"
+                >Студія</a
+              >
+            </li>
+            <li class="mob__nav-item">
+              <a href="./portfolio.html" class="mob__nav-link link"
+                >Портфоліо</a
+              >
+            </li>
+            <li class="mob__nav-item">
+              <a href="" class="mob__nav-link link">Контакти</a>
+            </li>
+          </ul>
+          <ul class="mob__contact list">
+            <li class="mob__contact-item">
+              <a href="tel:+380961111111" class="mob__contact-tel link">
+                +38 096 111 11 11</a
+              >
+            </li>
+            <li class="mob__contact-item">
+              <a
+                href="mailto:info@devstudio.com"
+                class="mob__contact-mail link"
+              >
+                info@devstudio.com</a
+              >
+            </li>
+          </ul>
+          <ul class="mob-soc-list list">
+            <li class="mob-soc-item">
+              <a href="" class="mob-soc-link link">Instagram</a>
+            </li>
+            <li class="mob-soc-item">
+              <a href="" class="mob-soc-link link">Twitter</a>
+            </li>
+            <li class="mob-soc-item">
+              <a href="" class="mob-soc-link link">Facebook</a>
+            </li>
+            <li class="mob-soc-item">
+              <a href="" class="mob-soc-link link">LinkedIn</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </header>
     <main>
       <!-- hero -->
       <section class="hero section">
@@ -189,7 +247,7 @@
                 />
                 <img
                   class="person__list-pictures"
-                  src="./images/team/team-card-des-1-1x-min.jpg"
+                  src="./images/team/team-card-mob-1-1x-min.jpg"
                   alt="Усміхнений хлопець в окулярах"
                   width="450"
                   height="260"
@@ -252,7 +310,7 @@
                 />
                 <img
                   class="team-pictures"
-                  src="./images/team/team-card-des-2-1x-min.jpg"
+                  src="./images/team/team-card-mob-2-1x-min.jpg"
                   alt="Усміхнена дівчина в окулярах"
                   width="450"
                   height="260"
@@ -315,7 +373,7 @@
                 />
                 <img
                   class="team-pictures"
-                  src="./images/team/team-card-des-3-1x-min.jpg"
+                  src="./images/team/team-card-mob-3-1x-min.jpg"
                   alt="Усміхнений хлопець"
                   width="450"
                   height="260"
@@ -378,7 +436,7 @@
                 />
                 <img
                   class="team-pictures"
-                  src="./images/team/team-card-des-4-1x-min.jpg"
+                  src="./images/team/team-card-mob-4-1x-min.jpg"
                   alt="Усміхнений хлопець в окулярах"
                   width="450"
                   height="260"
