--- a/index.html
+++ b/index.html
@@ -56,63 +56,67 @@
             >
           </li>
         </ul>
-        <button type="button" class="menu__open">
+        <button type="button" class="menu__open" data-menu-open>
           <svg class="menu__open-icon" width="40" height="40">
             <use href="./images/icons.svg#icon-menu"></use>
           </svg>
         </button>
       </div>
-      <div class="mob-menu">
-        <button type="button" class="menu-close">
-          <svg class="menu-close-icon" width="19" height="19">
-            <use href="./images/icons.svg#icon-close"></use>
-          </svg>
-        </button>
+      <div class="mob-menu is-hidden" data-menu>
         <div class="mob-container">
-          <ul class="mob__nav list">
-            <li class="mob__nav-item">
-              <a href="./index.html" class="mob__nav-link link current"
-                >Студія</a
-              >
-            </li>
-            <li class="mob__nav-item">
-              <a href="./portfolio.html" class="mob__nav-link link"
-                >Портфоліо</a
-              >
-            </li>
-            <li class="mob__nav-item">
-              <a href="" class="mob__nav-link link">Контакти</a>
-            </li>
-          </ul>
-          <ul class="mob__contact list">
-            <li class="mob__contact-item">
-              <a href="tel:+380961111111" class="mob__contact-tel link">
-                +38 096 111 11 11</a
-              >
-            </li>
-            <li class="mob__contact-item">
-              <a
-                href="mailto:info@devstudio.com"
-                class="mob__contact-mail link"
-              >
-                info@devstudio.com</a
-              >
-            </li>
-          </ul>
-          <ul class="mob-soc-list list">
-            <li class="mob-soc-item">
-              <a href="" class="mob-soc-link link">Instagram</a>
-            </li>
-            <li class="mob-soc-item">
-              <a href="" class="mob-soc-link link">Twitter</a>
-            </li>
-            <li class="mob-soc-item">
-              <a href="" class="mob-soc-link link">Facebook</a>
-            </li>
-            <li class="mob-soc-item">
-              <a href="" class="mob-soc-link link">LinkedIn</a>
-            </li>
-          </ul>
+          <div class="mob-menu-top">
+            <button type="button" class="menu-close" data-menu-close>
+              <svg class="menu-close-icon" width="19" height="19">
+                <use href="./images/icons.svg#icon-close"></use>
+              </svg>
+            </button>
+            <ul class="mob__nav list">
+              <li class="mob__nav-item">
+                <a href="./index.html" class="mob__nav-link link current"
+                  >Студія</a
+                >
+              </li>
+              <li class="mob__nav-item">
+                <a href="./portfolio.html" class="mob__nav-link link"
+                  >Портфоліо</a
+                >
+              </li>
+              <li class="mob__nav-item">
+                <a href="" class="mob__nav-link link">Контакти</a>
+              </li>
+            </ul>
+          </div>
+          <div class="mob-menu-bootom">
+            <ul class="mob__contact list">
+              <li class="mob__contact-item">
+                <a href="tel:+380961111111" class="mob__contact-tel link">
+                  +38 096 111 11 11</a
+                >
+              </li>
+              <li class="mob__contact-item">
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="mob__contact-mail link"
+                >
+                  info@devstudio.com</a
+                >
+              </li>
+            </ul>
+            <ul class="mob-soc-list list">
+              <li class="mob-soc-item">
+                <a href="" class="mob-soc-link link">Instagram</a>
+              </li>
+              <li class="mob-soc-item">
+                <a href="" class="mob-soc-link link">Twitter</a>
+              </li>
+              <li class="mob-soc-item">
+                <a href="" class="mob-soc-link link">Facebook</a>
+              </li>
+              <li class="mob-soc-item">
+                <a href="" class="mob-soc-link link">LinkedIn</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </header>
@@ -184,7 +188,7 @@
           </ul>
         </div>
       </section>
-      <!-- <section class="examples section">
+      <section class="examples section">
         <div class="container">
           <h2 class="examples__title">Чим ми займаємося</h2>
           <ul class="pictures__list list">
@@ -217,7 +221,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <section class="team section">
         <div class="container">
           <h2 class="team__title">Наша команда</h2>
@@ -522,7 +526,7 @@
         </div>
       </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer__container">
         <div class="contact__footer">
           <a href="./index.html" class="link"
@@ -605,7 +609,7 @@
           </button>
         </form>
       </div>
-    </footer> -->
+    </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close" data-modal-close>
@@ -691,5 +695,6 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
