--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="container header__container">
         <nav class="navigation">
           <a href="./index.html" class="logo link">
@@ -58,8 +58,68 @@
             >
           </li>
         </ul>
+        <button type="button" class="menu__open" data-menu-open>
+          <svg class="menu__open-icon" width="40" height="40">
+            <use href="./images/icons.svg#icon-menu"></use>
+          </svg>
+        </button>
       </div>
-    </header> -->
+      <div class="mob-menu is-hidden" data-menu>
+        <div class="mob-container">
+          <div class="mob-menu-top">
+            <button type="button" class="menu-close" data-menu-close>
+              <svg class="menu-close-icon" width="19" height="19">
+                <use href="./images/icons.svg#icon-close"></use>
+              </svg>
+            </button>
+            <ul class="mob__nav list">
+              <li class="mob__nav-item">
+                <a href="./index.html" class="mob__nav-link link">Студія</a>
+              </li>
+              <li class="mob__nav-item">
+                <a href="./portfolio.html" class="mob__nav-link link current"
+                  >Портфоліо</a
+                >
+              </li>
+              <li class="mob__nav-item">
+                <a href="" class="mob__nav-link link">Контакти</a>
+              </li>
+            </ul>
+          </div>
+          <div class="mob-menu-bootom">
+            <ul class="mob__contact list">
+              <li class="mob__contact-item">
+                <a href="tel:+380961111111" class="mob__contact-tel link">
+                  +38 096 111 11 11</a
+                >
+              </li>
+              <li class="mob__contact-item">
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="mob__contact-mail link"
+                >
+                  info@devstudio.com</a
+                >
+              </li>
+            </ul>
+            <ul class="mob-soc-list list">
+              <li class="mob-soc-item">
+                <a href="" class="mob-soc-link link">Instagram</a>
+              </li>
+              <li class="mob-soc-item">
+                <a href="" class="mob-soc-link link">Twitter</a>
+              </li>
+              <li class="mob-soc-item">
+                <a href="" class="mob-soc-link link">Facebook</a>
+              </li>
+              <li class="mob-soc-item">
+                <a href="" class="mob-soc-link link">LinkedIn</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </header>
     <main>
       <section class="portfolio section">
         <div class="container">
@@ -283,7 +343,7 @@
         </div>
       </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer__container">
         <div class="contact__footer">
           <a href="./index.html" class="link"
@@ -366,6 +426,7 @@
           </button>
         </form>
       </div>
-    </footer> -->
+    </footer>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
