--- a/portfolio.html
+++ b/portfolio.html
@@ -141,12 +141,35 @@
             <li class="gallery__list-item">
               <a href="" class="gallery__list-link link">
                 <div class="gallery__list-top-wrap">
-                  <img
-                    src="./images/portfolio-1.jpg"
-                    alt="Ноутбук з вітритим сайтом"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                  srcset="
+                    ./images/portfolio/gallery-des-1-1x.jpg 1x,
+                    ./images/portfolio/gallery-des-1-2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/portfolio/gallery-tab-1-1x.jpg 1x,
+                    ./images/portfolio/gallery-tab-1-2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                    ./images/portfolio/gallery-mob-1-1x.jpg 1x,
+                    ./images/portfolio/gallery-mob-1-2x.jpg 2x
+                  "
+                  media="(min-width: 320px)"
+                />
+                    <img
+                      src="./images/portfolio/gallery-mob-1-1x.jpg"
+                      alt="Ноутбук з вітритим сайтом"
+                      width="450"
+                      height="294"
+                    />
+                  </pictur>
                   <p class="gallery__list-top-text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -162,12 +185,35 @@
             <li class="gallery__list-item">
               <a href="" class="gallery__list-link link">
                 <div class="gallery__list-top-wrap">
-                  <img
-                    src="./images/portfolio-2.jpg"
-                    alt="Два баскетболісти змагаються"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                  srcset="
+                    ./images/portfolio/gallery-des-2-1x.jpg 1x,
+                    ./images/portfolio/gallery-des-2-2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/portfolio/gallery-tab-2-1x.jpg 1x,
+                    ./images/portfolio/gallery-tab-2-2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                    ./images/portfolio/gallery-mob-2-1x.jpg 1x,
+                    ./images/portfolio/gallery-mob-2-2x.jpg 2x
+                  "
+                  media="(min-width: 320px)"
+                />
+                    <img
+                      src="./images/portfolio/gallery-mob-2-1x.jpg"
+                      alt="Два баскетболісти змагаються"
+                      width="450"
+                      height="294"
+                    />
+                  </picture>
                   <p class="gallery__list-top-text">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Rem similique cupiditate voluptatum expedita magni
@@ -186,12 +232,35 @@
             <li class="gallery__list-item">
               <a href="" class="gallery__list-link link">
                 <div class="gallery__list-top-wrap">
-                  <img
-                    src="./images/portfolio-3.jpg"
-                    alt="Назва ресторану з фоном риби"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                  srcset="
+                    ./images/portfolio/gallery-des-3-1x.jpg 1x,
+                    ./images/portfolio/gallery-des-3-2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/portfolio/gallery-tab-3-1x.jpg 1x,
+                    ./images/portfolio/gallery-tab-3-2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                    ./images/portfolio/gallery-mob-3-1x.jpg 1x,
+                    ./images/portfolio/gallery-mob-3-2x.jpg 2x
+                  "
+                  media="(min-width: 320px)"
+                />
+                    <img
+                      src="./images/portfolio/gallery-mob-3-1x.jpg"
+                      alt="Назва ресторану з фоном риби"
+                      width="450"
+                      height="294"
+                    />
+                  </picture>
                   <p class="gallery__list-top-text">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Rem similique cupiditate voluptatum expedita magni
@@ -208,12 +277,35 @@
             <li class="gallery__list-item">
               <a href="" class="gallery__list-link link">
                 <div class="gallery__list-top-wrap">
-                  <img
-                    src="./images/portfolio-4.jpg"
-                    alt="Навушники"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                  srcset="
+                    ./images/portfolio/gallery-des-4-1x.jpg 1x,
+                    ./images/portfolio/gallery-des-4-2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/portfolio/gallery-tab-4-1x.jpg 1x,
+                    ./images/portfolio/gallery-tab-4-2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                    ./images/portfolio/gallery-mob-4-1x.jpg 1x,
+                    ./images/portfolio/gallery-mob-4-2x.jpg 2x
+                  "
+                  media="(min-width: 320px)"
+                />
+                    <img
+                      src="./images/portfolio/gallery-mob-4-1x.jpg"
+                      alt="Навушники"
+                      width="450"
+                      height="294"
+                    />
+                  </picture>
                   <p class="gallery__list-top-text">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Rem similique cupiditate voluptatum expedita magni
@@ -230,12 +322,35 @@
             <li class="gallery__list-item">
               <a href="" class="gallery__list-link link">
                 <div class="gallery__list-top-wrap">
-                  <img
-                    src="./images/portfolio-5.jpg"
-                    alt="Дві коробки"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                  srcset="
+                    ./images/portfolio/gallery-des-5-1x.jpg 1x,
+                    ./images/portfolio/gallery-des-5-2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/portfolio/gallery-tab-5-1x.jpg 1x,
+                    ./images/portfolio/gallery-tab-5-2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                    ./images/portfolio/gallery-mob-5-1x.jpg 1x,
+                    ./images/portfolio/gallery-mob-5-2x.jpg 2x
+                  "
+                  media="(min-width: 320px)"
+                />
+                    <img
+                      src="./images/portfolio/gallery-mob-5-1x.jpg"
+                      alt="Дві коробки"
+                      width="450"
+                      height="294"
+                    />
+                  </picture>
                   <p class="gallery__list-top-text">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Rem similique cupiditate voluptatum expedita magni
@@ -252,12 +367,35 @@
             <li class="gallery__list-item">
               <a href="" class="gallery__list-link link">
                 <div class="gallery__list-top-wrap">
-                  <img
-                    src="./images/portfolio-6.jpg"
-                    alt="Монітор з вітритим сайтом"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                  srcset="
+                    ./images/portfolio/gallery-des-6-1x.jpg 1x,
+                    ./images/portfolio/gallery-des-6-2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/portfolio/gallery-tab-6-1x.jpg 1x,
+                    ./images/portfolio/gallery-tab-6-2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                    ./images/portfolio/gallery-mob-6-1x.jpg 1x,
+                    ./images/portfolio/gallery-mob-6-2x.jpg 2x
+                  "
+                  media="(min-width: 320px)"
+                />
+                    <img
+                      src="./images/portfolio/gallery-mob-6-1x.jpg"
+                      alt="Монітор з вітритим сайтом"
+                      width="450"
+                      height="294"
+                    />
+                  </picture>
                   <p class="gallery__list-top-text">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Rem similique cupiditate voluptatum expedita magni
@@ -276,12 +414,35 @@
             <li class="gallery__list-item">
               <a href="" class="gallery__list-link link">
                 <div class="gallery__list-top-wrap">
-                  <img
-                    src="./images/portfolio-7.jpg"
-                    alt="Відкрита книжка"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                  srcset="
+                    ./images/portfolio/gallery-des-7-1x.jpg 1x,
+                    ./images/portfolio/gallery-des-7-2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/portfolio/gallery-tab-7-1x.jpg 1x,
+                    ./images/portfolio/gallery-tab-7-2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                    ./images/portfolio/gallery-mob-7-1x.jpg 1x,
+                    ./images/portfolio/gallery-mob-7-2x.jpg 2x
+                  "
+                  media="(min-width: 320px)"
+                />
+                    <img
+                      src="./images/portfolio/gallery-mob-7-1x.jpg"
+                      alt="Відкрита книжка"
+                      width="450"
+                      height="294"
+                    />
+                  </picture>
                   <p class="gallery__list-top-text">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Rem similique cupiditate voluptatum expedita magni
@@ -298,12 +459,35 @@
             <li class="gallery__list-item">
               <a href="" class="gallery__list-link link">
                 <div class="gallery__list-top-wrap">
-                  <img
-                    src="./images/portfolio-8.jpg"
-                    alt="Лейба на мотузці"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                  srcset="
+                    ./images/portfolio/gallery-des-8-1x.jpg 1x,
+                    ./images/portfolio/gallery-des-8-2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/portfolio/gallery-tab-8-1x.jpg 1x,
+                    ./images/portfolio/gallery-tab-8-2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                    ./images/portfolio/gallery-mob-8-1x.jpg 1x,
+                    ./images/portfolio/gallery-mob-8-2x.jpg 2x
+                  "
+                  media="(min-width: 320px)"
+                />
+                    <img
+                      src="./images/portfolio/gallery-mob-8-1x.jpg"
+                      alt="Лейба на мотузці"
+                      width="450"
+                      height="294"
+                    />
+                  </picture>
                   <p class="gallery__list-top-text">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Rem similique cupiditate voluptatum expedita magni
@@ -320,12 +504,35 @@
             <li class="gallery__list-item">
               <a href="" class="gallery__list-link link">
                 <div class="gallery__list-top-wrap">
-                  <img
-                    src="./images/portfolio-9.jpg"
-                    alt="Людина друкує на ноутбуці"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                  srcset="
+                    ./images/portfolio/gallery-des-9-1x.jpg 1x,
+                    ./images/portfolio/gallery-des-9-2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/portfolio/gallery-tab-9-1x.jpg 1x,
+                    ./images/portfolio/gallery-tab-9-2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                    ./images/portfolio/gallery-mob-9-1x.jpg 1x,
+                    ./images/portfolio/gallery-mob-9-2x.jpg 2x
+                  "
+                  media="(min-width: 320px)"
+                />
+                    <img
+                      src="./images/portfolio/gallery-mob-9-1x.jpg"
+                      alt="Людина друкує на ноутбуці"
+                      width="450"
+                      height="294"
+                    />
+                  </picture>
                   <p class="gallery__list-top-text">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Rem similique cupiditate voluptatum expedita magni
